:books: docs: Add Documentation for showOpening
